--- a/web.html
+++ b/web.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:DodgerBlue;">
-
-<h1>My Website333/h1>
+<body siyle="background-color:DodgerBlue;"/>
+<h1>My Website333</h1>
 <p>hello world</p>
 
 </body>
